# automata-gen

./: .gitignore  LICENSE  README.md  pyproject.toml
automata_gen/: desops_gen.py  desops_generate.py  erdos_renyi.py  filter.py  util.py
examples/: gen_wmod.py
test/: test_automata_gen.py
