[tool.poetry]
name = "automata-gen"
version = "0.1.1"
description = ""
authors = ["Andrew Wintenberg <awintenb@umich.edu>"]

[tool.poetry.dependencies]
python = "^3.10"
desops = {git = "https://gitlab.eecs.umich.edu/M-DES-tools/desops.git"}
pytest = "^7.2.1"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
setuptools = "^69.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
